<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.story.AddStoryActivity"
    android:padding="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgStory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grayishWhite"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCamera"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:shapeAppearanceOverlay="@style/StoryShape"
        tools:src="@drawable/ic_baseline_image_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgStory"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/btnGallery"
        app:layout_constraintBottom_toTopOf="@id/edtDescription"
        android:layout_marginEnd="8dp"
        android:text="@string/action_camera"
        android:layout_marginStart="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnCamera"
        app:layout_constraintTop_toTopOf="@id/btnCamera"
        app:layout_constraintBottom_toBottomOf="@id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/action_gallery"/>

    <com.miko.story.presentation.membership.view.StoryEditText
        android:id="@+id/edtDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        android:layout_marginTop="20dp"
        app:storyInputType="normal"
        app:storyMultiline="true"
        app:layout_constraintBottom_toTopOf="@id/btnUpload"
        app:storyLabel="@string/label_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtDescription"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/action_upload"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>